<resources>
    <string name="app_name">ip2calc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Calculator</string>
    <string name="second_fragment_label">Result</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="modulus">Modulus</string>
    <string name="exponent">Exponent</string>

    <string name="previous">Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>